[gd_scene load_steps=4 format=2]

[ext_resource path="res://Textures/StarYellow.png" type="Texture" id=1]
[ext_resource path="res://Scenes/StarThresholdInfo.gd" type="Script" id=2]
[ext_resource path="res://Fonts/star_threshold_info_font.tres" type="DynamicFont" id=3]

[node name="StarThresholdInfo" type="Control"]
rect_scale = Vector2( 0.4, 0.4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1418.0
margin_bottom = 180.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarYellow" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 180.0
margin_bottom = 180.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarYellow2" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 184.0
margin_right = 364.0
margin_bottom = 180.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarYellow3" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 368.0
margin_right = 548.0
margin_bottom = 180.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
modulate = Color( 0.866667, 0.74902, 0.470588, 1 )
margin_left = 552.0
margin_right = 591.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = " "
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThreeStarLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
modulate = Color( 0.866667, 0.74902, 0.470588, 1 )
margin_left = 595.0
margin_right = 1418.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "123,123,123"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 184.0
margin_right = 1418.0
margin_bottom = 364.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarYellow" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_right = 180.0
margin_bottom = 180.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarYellow2" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_left = 184.0
margin_right = 364.0
margin_bottom = 180.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarYellow3" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 368.0
margin_right = 548.0
margin_bottom = 180.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
modulate = Color( 0.866667, 0.74902, 0.470588, 1 )
margin_left = 552.0
margin_right = 591.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = " "
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TwoStarLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
modulate = Color( 0.866667, 0.74902, 0.470588, 1 )
margin_left = 595.0
margin_right = 1418.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "123,123,123"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 368.0
margin_right = 1418.0
margin_bottom = 548.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarYellow" type="TextureRect" parent="VBoxContainer/HBoxContainer3"]
margin_right = 180.0
margin_bottom = 180.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarYellow3" type="TextureRect" parent="VBoxContainer/HBoxContainer3"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 184.0
margin_right = 364.0
margin_bottom = 180.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarYellow4" type="TextureRect" parent="VBoxContainer/HBoxContainer3"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 368.0
margin_right = 548.0
margin_bottom = 180.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
modulate = Color( 0.866667, 0.74902, 0.470588, 1 )
margin_left = 552.0
margin_right = 591.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = " "
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OneStarLabel" type="Label" parent="VBoxContainer/HBoxContainer3"]
modulate = Color( 0.866667, 0.74902, 0.470588, 1 )
margin_left = 595.0
margin_right = 1418.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "123,123,123"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
